--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <br/>
 <hr/>
 <h5>Offices &#183 Apartments &#183 Houses &#183 Shops</h5>
-<img class="intro_photos" src="ind_thumbnail.jpg">
-<img class="intro_photos" src="shop_thumbnail.jpg">
-<img class="intro_photos" src="off_thumbnail.jpg">
-<img class="intro_photos" src="liv_thumbnail.jpg">
+<img class="intro_photos" src="images/ind_thumbnail.jpg">
+<img class="intro_photos" src="images/shop_thumbnail.jpg">
+<img class="intro_photos" src="images/off_thumbnail.jpg">
+<img class="intro_photos" src="images/liv_thumbnail.jpg">
 <br/>
 <hr/>
 <br/>
@@ -69,64 +69,64 @@
 
 <!-- photocard links -->
 
-<a href="property1.html" class="showcase_card">
-<img src="images/penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Small apartment</h4>
 	<p>Monthly rate: RM 1,300</p>
 </div>
 </a>
 
-<a href="property2.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Medium apartment</h4>
 	<p>Monthly rate: RM 2,000</p>
 </div>
 </a>
 
-<a href="property3.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Large apartment</h4>
 	<p>Monthly rate: RM 3,200</p>
 </div>
 </a>
 
-<a href="property4.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Exclusive apartment</h4>
 	<p>Monthly rate: RM 4,000</p>
 </div>
 </a>
 
-<a href="property5.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<p>Large apartment</p>
 	<p>Monthly rate: RM 4,000</p>
 </div>
 </a>
 
-<a href="property6.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<p>Large apartment</p>
 	<p>Monthly rate: RM 4,000</p>
 </div>
 </a>
 
-<a href="property7.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<p>Large apartment</p>
 	<p>Monthly rate: RM 4,000</p>
 </div>
 </a>
 
-<a href="property8.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card">
+<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<p>Large apartment</p>
 	<p>Monthly rate: RM 4,000</p>
