--- a/product.html
+++ b/product.html
@@ -60,7 +60,7 @@
 	<div class="product_text">
 		<h5>APARTMENTS</h5>
 	</div>
-	<img src="penang.jpg" style="width: 300px; height: 200px;">
+	<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
 	<div class="product_text">
 	Choose from a list of stylish new
 	apartments to call your new home
@@ -70,7 +70,7 @@
 	<div class="product_text">
 		<h5>HOUSES</h5>
 	</div>
-	<img src="penang.jpg" style="width: 300px; height: 200px;">
+	<img src="images/penang.jpg" style="width: 300px; height: 200px;">
 	<div class="product_text">
 	Choose from a list of stylish new
 	apartments to call your new home
@@ -84,7 +84,7 @@
 	<div class="product_text">
 		<h5>OFFICES</h5>
 	</div>
-	<img src="penang.jpg" style="width: 300px; height: 200px;">
+	<img src="images/office.jpg" style="width: 300px; height: 200px;">
 	<div class="product_text">
 	Choose from a list of stylish new
 	offices to call your new work area
@@ -94,7 +94,7 @@
 	<div class="product_text">
 		<h5>SHOPS</h5>
 	</div>
-	<img src="penang.jpg" style="width: 300px; height: 200px;">
+	<img src="images/shop_thumbnail.jpg" style="width: 300px; height: 200px;">
 	<div class="product_text">
 	Choose from a list of stylish new
 	apartments to call your new home
@@ -110,7 +110,7 @@
 <!-- photocard links -->
 
 <a href="property1.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="images/penang.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Medium apartment</h4>
 	<p>Monthly rate: RM 800</p>
@@ -118,15 +118,15 @@
 </a>
 
 <a href="property2.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="images/offices/medium_internal.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Second Floor Office</h4>
-	<p>Monthly rate: RM 8,000</p>
+	<h4>Medium Internal Office</h4>
+	<p>Monthly rate: RM 1,100</p>
 </div>
 </a>
 
 <a href="property3.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="images/penang.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Terrace House</h4>
 	<p>Monthly rate: RM 1,200</p>
@@ -134,7 +134,7 @@
 </a>
 
 <a href="property4.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<img src="images/penang.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
 	<h4>Corner Shop Lot</h4>
 	<p>Monthly rate: RM 5,000</p>
