--- a/aboutme4.html
+++ b/aboutme4.html
@@ -11,24 +11,28 @@
   <div class="aboutmebody">
 
 
-<header class="banner_photo" id="inquiry_banner_photo">
+<<header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
-			<a id="active" class="menu_about" href="about.html">About Us</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
+			<a class="menu_about" id="active"  href="about.html">About Us</a>
 	</div>
-	<span class="headline">
-	<!-- Change this for different pages -->
-	<h1>About Us</h1>
-	</span>
 </header>
 
 
     <div class="container">
   <div class="avatar-flip">
-    <img src="members/Jeffery.jpeg" alt="Jeffery" height="150" width="150">
-    <img src="members/Jeffery2.jpeg" alt="Flipimg" height="150" width="150">
+    <img src="images/members/Jeffery.jpeg" alt="Jeffery" height="150" width="150">
+    <img src="images/members/Jeffery2.jpeg" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Jeffery Sia</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
