--- a/aboutme4.html
+++ b/aboutme4.html
@@ -46,12 +46,8 @@
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. </td>
 </table>
-<p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia. Likes to play games.</p>
-<p id="aboutmep">This extra information gives you an opportunity to extend the techniques you apply in your
-assignment, and could include:
-• Demographic information about you
-• Description of hometown
-• A list of your favourite books, music, films etc.</p>
+<p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia. Likes to play games. The most hated thing is working with empty stomach.</p>
+<p id="aboutmep">Sibu, also known as Swan City, its signature food are kompia and kampua noodles.</p>
   <p id="studentid">StudentID: 101216138</p>
 
 </div>
