apartments page completed

--- a/apartments.html
+++ b/apartments.html
@@ -23,8 +23,16 @@
 <header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a id="active" href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
+			<div class="dropdown">
+				<a class="dropdown_link" id="active" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
 </header>
@@ -39,82 +47,101 @@
 <!-- Fill in the description. Remember, 200 words for each page. Read the assignment instructions! -->
 
 <br/>
-	
-<div class="content_box">
 
 <br/>
 <h3>Apartments</h3>
 
 <!-- photocard links -->
 
-<a href="property1.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+
+<a href="property1.html" class="showcase_card_products">
+<img src="offices/small_internal.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Small apartment</h4>
-	<p>Monthly rate: RM 1,300</p>
+	<h4>Two-Bedroom Apartment</h4>
+	<ul>
+		<li>1,270 sq.ft (RM1.89 per sq.ft)</li>
+		<li>Monthly rate: RM 2,400</li>
+		<li>Fully furnished and decorated</li>
+		<li>WiFi provided</li>
+		<li>Located close to international airport</li>
+		<li>Built in 2017</li>		
+		<li>Second floor</li>
+		<li>Kitchen with cooking stove provided</li>
+		<li>Patrolling security guards and CCTV surveillance</li>
+	</ul>
 </div>
 </a>
 
-<a href="property2.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property2.html" class="showcase_card_products">
+<img src="offices/medium_internal.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Medium apartment</h4>
-	<p>Monthly rate: RM 2,000</p>
+	<h4>D'Glass Studio Apartment</h4>
+	<ul>
+		<li>300 sq.ft (RM5 per sq.ft)</li>		
+		<li>Monthly rate: RM 1,500</li>
+		<li>Fully furnished and decorated</li>
+		<li>High Speed WiFi provided</li>
+		<li>Located close to city center</li>		
+		<li>Top floor</li>
+		<li>Patrolling security guards and CCTV surveillance</li>
+	</ul>
 </div>
 </a>
 
-<a href="property3.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property3.html" class="showcase_card_products">
+<img src="offices/small_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Large apartment</h4>
-	<p>Monthly rate: RM 3,200</p>
+	<h4>Breezehome Apartment</h4>
+	<ul>
+		<li>650 sq.ft (RM1.38 per sq.ft)</li>
+		<li>Monthly rate: RM 900</li>
+		<li>Basic furnishing</li>
+		<li>WiFi provided</li>
+		<li>Third floor</li>
+		<li>Building secured with ID card system</li>
+	</ul>
 </div>
 </a>
 
-<a href="property4.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property4.html" class="showcase_card_products">
+<img src="offices/medium_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Exclusive apartment</h4>
-	<p>Monthly rate: RM 4,000</p>
+	<h4>Highfields Apartment</h4>
+	<ul>
+		<li>800 sq.ft (RM1.12 per sq.ft)</li>
+		<li>Monthly rate: RM 900</li>
+		<li>Basic furnishings</li>		
+		<li>Five miles from city center</li>
+		<li>Close to central bus station</li>
+		<li>First floor</li>
+		<li>Kitchen with cooking stove provided</li>
+		<li>Basic security with CCTV surveillance</li>
+	</ul>
 </div>
 </a>
 
-<a href="property5.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property5.html" class="showcase_card_products">
+<img src="offices/large_window.jpeg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
+<h4>Horizons Deluxe Apartment</h4>
+	<ul>
+		<li>1,345 sq.ft (RM2.19 per sq.ft)</li>
+		<li>Monthly rate: RM 2,950</li>
+		<li>Fully furnished</li>		
+		<li>Fully equipped kitchen with exhaust system</li>
+		<li>High-speed WiFi provided</li>
+		<li>Located in city center</li>		
+		<li>Second floor</li>		
+		<li>Great view of the city skyline</li>
+		<li>Patrolling security guards and CCTV surveillance</li>
+	</ul>
 </div>
 </a>
 
-<a href="property6.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
-
-<a href="property7.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
-
-<a href="property8.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
 
 <!-- End of photocard links -->
 
 <br/><br/><br/><br/>
-</div>
 
 </article>
 
