--- a/aboutme4.html
+++ b/aboutme4.html
@@ -54,7 +54,7 @@
   </div>
   <footer>
     <p id="email_foot">Contact information: <a href="mailto:101216138@students.swinburne.edu.my">101216138@students.swinburne.edu.my</a>.</p>
-  <table cellpadding="5" style="color: white; margin-left: 30px;">
+  <table cellpadding="5" class="footer_table">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
   </tr>
