--- a/aboutme3.html
+++ b/aboutme3.html
@@ -47,7 +47,7 @@ assignment, and could include:
   </div>
   <footer>
     <p id="email_foot">Contact information: <a href="mailto:100086699@students.swinburne.edu.my">100086699@students.swinburne.edu.my</a>.</p>
-  <table cellpadding="5" style="color: white; margin-left: 30px;">
+  <table cellpadding="5" class="footer_table">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
   </tr>
