--- a/aboutme2.html
+++ b/aboutme2.html
@@ -20,8 +20,8 @@
 
     <div class="container">
   <div class="avatar-flip">
-    <img src="members/Alex.jpeg" alt="Alex Haider" height="150" width="150">
-    <img src="members/Alex2.jpg" alt="Flipimg" height="150" width="150">
+    <img src="images/members/Alex.jpeg" alt="Alex Haider" height="150" width="150">
+    <img src="images/members/Alex2.jpg" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Alex Haider Abedin</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
