--- a/aboutme3.html
+++ b/aboutme3.html
@@ -20,8 +20,8 @@
 
     <div class="container">
   <div class="avatar-flip">
-    <img src="members/Jonathan.jpeg" alt="Jonathan Embas" height="150" width="150">
-    <img src="members/Jonathan2.jpeg" alt="Flipimg" height="150" width="150">
+    <img src="images/members/Jonathan.jpeg" alt="Jonathan Embas" height="150" width="150">
+    <img src="images/members/Jonathan2.jpeg" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Jonathan Embas</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
