--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 </body>
 
 <footer>
+<p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
 
 <table cellpadding="5" class="footer_table">
 <tr>
