--- a/offices.html
+++ b/offices.html
@@ -54,7 +54,7 @@
 
 <!-- photocard links -->
 
-<a href="enquiry.html" class="showcase_card_offices">
+<a href="enquiry.html" class="showcase_card_products">
 <img src="images/offices/small_internal.jpeg" class="offices">
 <div class="showcase_text">
 	<h4>Small internal office</h4>
@@ -69,7 +69,7 @@
 </div>
 </a>
 
-<a href="enquiry.html" class="showcase_card_offices">
+<a href="enquiry.html" class="showcase_card_products">
 <img src="images/offices/medium_internal.jpeg" class="offices">
 <div class="showcase_text">
 	<h4>Medium internal office</h4>
@@ -85,7 +85,7 @@
 </div>
 </a>
 
-<a href="enquiry.html" class="showcase_card_offices">
+<a href="enquiry.html" class="showcase_card_products">
 <img src="images/offices/small_window.jpeg" class="offices">
 <div class="showcase_text">
 	<h4>Small window office</h4>
@@ -100,7 +100,7 @@
 </div>
 </a>
 
-<a href="enquiry.html" class="showcase_card_offices">
+<a href="enquiry.html" class="showcase_card_products">
 <img src="images/offices/medium_window.jpeg" class="offices">
 <div class="showcase_text">
 	<h4>Medium window office</h4>
@@ -116,7 +116,7 @@
 </div>
 </a>
 
-<a href="enquiry.html" class="showcase_card_offices">
+<a href="enquiry.html" class="showcase_card_products">
 <img src="images/offices/large_window.jpeg" class="offices">
 <div class="showcase_text">
 <h4>Large window office</h4>
