--- a/offices.html
+++ b/offices.html
@@ -55,7 +55,7 @@
 <!-- photocard links -->
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/offices/small_internal.jpeg" class="offices">
+<img src="images/offices/small_internal.jpeg" class="products">
 <div class="showcase_text">
 	<h4>Small internal office</h4>
 	<ul>
@@ -70,7 +70,7 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/offices/medium_internal.jpeg" class="offices">
+<img src="images/offices/medium_internal.jpeg" class="products">
 <div class="showcase_text">
 	<h4>Medium internal office</h4>
 	<ul>
@@ -86,7 +86,7 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/offices/small_window.jpeg" class="offices">
+<img src="images/offices/small_window.jpeg" class="products">
 <div class="showcase_text">
 	<h4>Small window office</h4>
 	<ul>
@@ -101,7 +101,7 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/offices/medium_window.jpeg" class="offices">
+<img src="images/offices/medium_window.jpeg" class="products">
 <div class="showcase_text">
 	<h4>Medium window office</h4>
 	<ul>
@@ -117,7 +117,7 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/offices/large_window.jpeg" class="offices">
+<img src="images/offices/large_window.jpeg" class="products">
 <div class="showcase_text">
 <h4>Large window office</h4>
 	<ul>
