--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 </body>
 
 <footer>
-
+<p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
 <table cellpadding="5" style="color: white; margin-left: 30px;">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
