--- a/offices.html
+++ b/offices.html
@@ -151,7 +151,7 @@
 </body>
 
 <footer>
-
+<p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
 <table cellpadding="5" class="footer_table">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
