--- a/aboutme4.html
+++ b/aboutme4.html
@@ -41,10 +41,10 @@
     <th class ="Contributionth">Contributions</th>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">1. </td>
+    <td class= "Contributiontd">1. disclaimer.html</td>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">2. </td>
+    <td class= "Contributiontd">2. offices.html</td>
 </table>
 <p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia. Likes to play games. The most hated thing is working with empty stomach.</p>
 <p id="aboutmep">Sibu, also known as Swan City, its signature food are kompia and kampua noodles.</p>
