--- a/aboutme4.html
+++ b/aboutme4.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Jeffery Sia</title>
 
         <link rel="stylesheet" href="style.css">
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<title>Profile</title>
+		
   </head>
 
   <div class="aboutmebody">
 
 
-<<header>
+<header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
 			<a href="enquiry.html">Enquiries</a>
