--- a/disclaimer.html
+++ b/disclaimer.html
@@ -19,8 +19,16 @@
 <header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a id="active" href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
 			<a class="menu_about" href="about.html">About Us</a>
 	</div>
 </header>
@@ -63,7 +71,7 @@
 
 <footer>
 
-<table cellpadding="5" style="color: white; margin-left: 30px;">
+<table class="footer_table" cellpadding="5">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
 </tr>
