--- a/product.html
+++ b/product.html
@@ -156,7 +156,7 @@
 
 <footer>
 <p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
-<table cellpadding="5" style="color: white; margin-left: 30px;">
+<table class="footer_table" cellpadding="5">
 <tr>
 	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
 </tr>
