--- a/offices.html
+++ b/offices.html
@@ -34,6 +34,7 @@
 				</div>
 			</div>
 			<a class="menu_about"  href="about.html">About Us</a>
+	</div>
 </header>
 
 <article>
@@ -159,7 +160,7 @@
 <p id="disclaimer_foot"><a href="disclaimer.html">Disclaimer</a></p>
 <table cellpadding="5" class="footer_table">
 <tr>
-	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
+	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th><th></th>
 </tr>
 <tr>
 	<th>Regional Office</th><th>Hours:</th>
