Changes to aboutme

--- a/aboutme1.html
+++ b/aboutme1.html
@@ -32,8 +32,8 @@
 
     <div class="container">
   <div class="avatar-flip">
-    <img src="members/Ryan.jpeg" alt="Ryanthen" height="150" width="150">
-    <img src="members/Ryan2.jpeg" alt="Flipimg" height="150" width="150">
+    <img src="images/members/Ryan.jpeg" alt="Ryanthen" height="150" width="150">
+    <img src="images/members/Ryan2.jpeg" alt="Flipimg" height="150" width="150">
   </div>
   <h2 id="aboutmeh2">Ryan Then</h2>
   <h4 id="aboutmeh4">Computer Science</h4>
