--- a/aboutme4.html
+++ b/aboutme4.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+		<title>Jeffery Sia</title>
 
         <link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<title>Profile</title>
 		
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />		
   </head>
 
   <div class="aboutmebody">
