--- a/aboutme2.html
+++ b/aboutme2.html
@@ -5,18 +5,29 @@
     <title>Alex Haider Abedin</title>
 
         <link rel="stylesheet" href="style.css">
+		
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
   <div class="aboutmebody">
 
 
-    	<div class="banner">
-    		<span class="transparent_header"><a class="banner_link" href="index.html">Home</a></span>
-    		<span class="transparent_header"><a class="banner_link" href="rent.html">Rent</a></span>
-    		<span class="transparent_header"><a class="banner_link" href="inq.html">Inquiries</a></span>
-    		<span class="transparent_header"><a class="banner_link" href="about.html">About Us</a></span>
-    	</div>
-
+<header>
+	<div class="menu_banner">
+			<a href="index.html">Home</a>
+			<a href="enquiry.html">Enquiries</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
+			<a class="menu_about" id="active"  href="about.html">About Us</a>
+	</div>
+</header>
 
     <div class="container">
   <div class="avatar-flip">
