--- a/houses.html
+++ b/houses.html
@@ -10,7 +10,7 @@
 
 <head>
 
-<title>Apartments</title>
+<title>Houses</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -43,7 +43,7 @@
 <div class="content_box">
 
 <br/>
-<h3>Apartments</h3>
+<h3>Houses</h3>
 
 <!-- photocard links -->
 
