--- a/aboutme1.html
+++ b/aboutme1.html
@@ -42,17 +42,16 @@
     <th class ="Contributionth">Contributions</th>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">1. </td>
+    <td class= "Contributiontd">1. Website hierarchy and styling design</td>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">2. </td>
+    <td class= "Contributiontd">2. Homepage</td>
+  </tr>
+  <tr class = "Contributiontr">
+    <td class= "Contributiontd">3. Product page</td>
 </table>
-  <p id="aboutmep">It could also include personal profile, such as resume, interests, or information that is related to you.</p>
-  <p id="aboutmep">This extra information gives you an opportunity to extend the techniques you apply in your
-  assignment, and could include:
-  • Demographic information about you
-  • Description of hometown
-  • A list of your favourite books, music, films etc.</p>
+  <p id="aboutmep">Chinese Malaysian born and raised in Kuching, Sarawak.</p>
+  <p id="aboutmep">I am a student at Swinburne University. My main interests are reading and writing.</p>
   <p id="studentid">StudentID: 100086699</p>
 
 </div>
