--- a/aboutme3.html
+++ b/aboutme3.html
@@ -42,23 +42,19 @@
     <th class ="Contributionth">Contributions</th>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">1. </td>
+    <td class= "Contributiontd">1. Enquiries page </td>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">2. </td>
+    <td class= "Contributiontd">2. Product (Shops) page </td>
 </table>
-<p id="aboutmep">It could also include personal profile, such as resume, interests, or information that is related to you.</p>
-<p id="aboutmep">This extra information gives you an opportunity to extend the techniques you apply in your
-assignment, and could include:
-• Demographic information about you
-• Description of hometown
-• A list of your favourite books, music, films etc.</p>
-  <p id="studentid">StudentID: 100086699</p>
+<p id="aboutmep">Iban raised in Peninsular Malaysia. Part-time Musician and Athlete.</p>
+<p id="aboutmep">I was born in Miri, Sarawak and lived there for 7 years before I moved to Terengganu. I lived in Terengganu for 5 years and moved to Selangor and based there to this day. I'm a part-time musician in Kuching and also in KL so I travel a lot within these two places. I have been self-taught since I was 10. I play mainly the drums and can also play the guitar, bass guitar and keyboard. I also play futsal for a local club in Kuching called We United.</p>
+  <p id="studentid">StudentID: 101213430</p>
 
 </div>
   </div>
   <footer>
-    <p id="email_foot">Contact information: <a href="mailto:100086699@students.swinburne.edu.my">100086699@students.swinburne.edu.my</a>.</p>
+    <p id="email_foot">Contact information: <a href="mailto:101213430@students.swinburne.edu.my">101213430@students.swinburne.edu.my</a>.</p>
   <table cellpadding="5" class="footer_table">
   <tr>
   	<th><br/> © Beta Real Estate Corporation Sdn Bhd</th>
