--- a/aboutme4.html
+++ b/aboutme4.html
@@ -42,10 +42,10 @@
     <th class ="Contributionth">Contributions</th>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">1. disclaimer.html</td>
+    <td class= "Contributiontd">1. Disclaimer page</td>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">2. offices.html</td>
+    <td class= "Contributiontd">2. Products(offices) page</td>
 </table>
 <p id="aboutmep">A boy with average height from Sibu, Sarawak, Malaysia. Likes to play games. The most hated thing is working with empty stomach.</p>
 <p id="aboutmep">Sibu, also known as Swan City, its signature food are kompia and kampua noodles.</p>
