shops & style.css

--- a/shops.html
+++ b/shops.html
@@ -10,7 +10,7 @@
 
 <head>
 
-<title>Apartments</title>
+<title>Shops</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -43,71 +43,91 @@
 <div class="content_box">
 
 <br/>
-<h3>Apartments</h3>
+<h3>Shops</h3>
 
 <!-- photocard links -->
 
-<a href="property1.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property1.html" class="showcase_card_shops">
+<img src="shops/small_sized_shop.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Small apartment</h4>
-	<p>Monthly rate: RM 1,300</p>
+	<h4>Small-sized shop</h4>
+	<ul>
+		<li>Monthly rate: RM 700</li> 
+		<li>Floor size: 500sqft</li> 
+		<li>RM 1.40 psf</li> 
+		<li>Fully furnished</li> 
+		<li>Facilities: Lifts, restrooms</li>
+	</ul>
 </div>
 </a>
 
-<a href="property2.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property2.html" class="showcase_card_shops">
+<img src="shops/small_sized_shop2.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Medium apartment</h4>
-	<p>Monthly rate: RM 2,000</p>
+	<h4>Small-sized shop</h4>
+	<ul>
+		<li>Monthly rate: RM 800</li> 
+		<li>Floor size: 600sqft</li> 
+		<li>RM 1.60 psf</li> 
+		<li>Fully furnished</li> 
+		<li>Facilities: Lifts, restrooms</li>
+	</ul>
 </div>
 </a>
 
-<a href="property3.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property3.html" class="showcase_card_shops">
+<img src="shops/medium_sized_shop.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Large apartment</h4>
-	<p>Monthly rate: RM 3,200</p>
+	<h4>Medium-sized shop</h4>
+	<ul>
+		<li>Monthly rate: RM 1400</li> 
+		<li>Floor size: 1400sqft</li> 
+		<li>RM 1.20 psf</li> 
+		<li>Fully furnished</li> 
+		<li>Facilities: Lifts, restrooms, car parking bays</li>
+	</ul>
 </div>
 </a>
 
-<a href="property4.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property4.html" class="showcase_card_shops">
+<img src="shops/medium_sized_shop2.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<h4>Exclusive apartment</h4>
-	<p>Monthly rate: RM 4,000</p>
+	<h4>Medium-sized shop</h4>
+	<ul>
+		<li>Monthly rate: RM 2000</li> 
+		<li>Floor size: 1900sqft</li> 
+		<li>RM 1.80 psf</li> 
+		<li>Fully furnished</li> 
+		<li>Facilities: Lifts, restrooms, car parking bays</li>
+	</ul>
 </div>
 </a>
 
-<a href="property5.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property5.html" class="showcase_card_shops">
+<img src="shops/large_sized_shop.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
+	<h4>Large-sized shop</h4>
+	<ul>
+		<li>Monthly rate: RM 3900</li> 
+		<li>Floor size: 3150sqft</li> 
+		<li>RM 2.00 psf</li> 
+		<li>Fully furnished</li> 
+		<li>Facilities: Escalator, lifts, restrooms, car parking bays</li>
+	</ul>
 </div>
 </a>
 
-<a href="property6.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
+<a href="property5.html" class="showcase_card_shops">
+<img src="shops/premium_shop.jpg" style="width: 300px; height: 200px;">
 <div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
-
-<a href="property7.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
-</div>
-</a>
-
-<a href="property8.html" class="showcase_card">
-<img src="penang.jpg" style="width: 300px; height: 200px;">
-<div class="showcase_text">
-	<p>Large apartment</p>
-	<p>Monthly rate: RM 4,000</p>
+	<h4>Premium shop</h4>
+	<ul>
+		<li>Monthly rate: RM 11,500</li> 
+		<li>Floor size: 2900sqft</li> 
+		<li>RM 4.50 psf</li> 
+		<li>Fully furnished</li> 
+		<li>Facilities: Escalator, lifts, restrooms, car parking bays</li>
+	</ul>
 </div>
 </a>
 
