--- a/houses.html
+++ b/houses.html
@@ -23,9 +23,17 @@
 <header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
-			<a id="active" href="product.html">Products</a>
 			<a href="enquiry.html">Enquiries</a>
-			<a class="menu_about" href="about.html">About Us</a>
+			<div class="dropdown">
+				<a class="dropdown_link" href="product.html">Products</a>
+				<div class="dropdown-content">
+					<a href="apartments.html">Apartments</a>
+					<a href="houses.html">Houses</a>
+					<a href="offices.html">Offices</a>
+					<a href="shops.html">Shops</a>
+				</div>
+			</div>
+			<a class="menu_about" id="active"  href="about.html">About Us</a>
 	</div>
 </header>
 
