--- a/aboutme2.html
+++ b/aboutme2.html
@@ -41,11 +41,13 @@
     <th class ="Contributionth">Contributions</th>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">1. </td>
+    <td class= "Contributiontd">1. About, Aboutme pages, Profile flip effect</td> also
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">2. </td>
+    <td class= "Contributiontd">2. Houses page</td>
 </table>
+  <p id="aboutmep">I'm an international student studying in Swinburne Malaysia. What I enjoy learning about the most in CS is machine learning and blockchain.</p>
+  <p id="aboutmep">My main hobbies are playing competitive games and going to the gym. I also enjoy taking photos and love photography. In my hometown we love to eat arabian foods such as shawarmas and kababs. I also have a pet dog named Ralph. </p>
 <p id="aboutmep">It could also include personal profile, such as resume, interests, or information that is related to you.</p>
 <p id="aboutmep">This extra information gives you an opportunity to extend the techniques you apply in your
 assignment, and could include:
