--- a/aboutme2.html
+++ b/aboutme2.html
@@ -41,7 +41,7 @@
     <th class ="Contributionth">Contributions</th>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">1. About, Aboutme pages, Profile flip effect</td> also
+    <td class= "Contributiontd">1. About, Aboutme pages, Profile flip effect</td>
   </tr>
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. Houses page</td>
