--- a/enquiry.html
+++ b/enquiry.html
@@ -53,7 +53,7 @@
 <div class="content_box">
 
 <br/>
-<p><h3 style="color: black;">Send us a message!</h3></p>
+<div class="content_banner">Send us a message!</div>
 
 <div>
 	<form>
