--- a/product.html
+++ b/product.html
@@ -102,10 +102,10 @@
 	</a>
 </div>
 	
-<div class="content_box">
+
 
 <br/>
-<h3>Properties For You</h3>
+<div class="content_banner">Properties For You</div>
 
 <!-- photocard links -->
 
@@ -141,10 +141,7 @@
 </div>
 </a>
 <br/><br/><br/><br/>
-</div>
-
 </article>
-
 <br/>
 <br/>
 <br/>
