--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="content_box">
 
 <br/>
-<div style="background-color: #2F8DCD;"><h3>Latest Projects</h3></div>
+<div class="content_banner">Latest Projects</div>
 
 <!-- photocard links -->
 
