--- a/shops.html
+++ b/shops.html
@@ -55,8 +55,8 @@
 
 <!-- photocard links -->
 
-<a href="property1.html" class="showcase_card_shops">
-<img src="images/shops/small_sized_shop.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card_products">
+<img src="images/shops/small_sized_shop.jpg" class="products">
 <div class="showcase_text">
 	<h4>Small-sized shop</h4>
 	<ul>
@@ -69,8 +69,8 @@
 </div>
 </a>
 
-<a href="property2.html" class="showcase_card_shops">
-<img src="images/shops/small_sized_shop2.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card_products">
+<img src="images/shops/small_sized_shop2.jpg" class="products">
 <div class="showcase_text">
 	<h4>Small-sized shop</h4>
 	<ul>
@@ -83,8 +83,8 @@
 </div>
 </a>
 
-<a href="property3.html" class="showcase_card_shops">
-<img src="images/shops/medium_sized_shop.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card_products">
+<img src="images/shops/medium_sized_shop.jpg" class="products">
 <div class="showcase_text">
 	<h4>Medium-sized shop</h4>
 	<ul>
@@ -97,8 +97,8 @@
 </div>
 </a>
 
-<a href="property4.html" class="showcase_card_shops">
-<img src="images/shops/medium_sized_shop2.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card_products">
+<img src="images/shops/medium_sized_shop2.jpg" class="products">
 <div class="showcase_text">
 	<h4>Medium-sized shop</h4>
 	<ul>
@@ -111,8 +111,8 @@
 </div>
 </a>
 
-<a href="property5.html" class="showcase_card_shops">
-<img src="images/shops/large_sized_shop.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card_products">
+<img src="images/shops/large_sized_shop.jpg" class="products">
 <div class="showcase_text">
 	<h4>Large-sized shop</h4>
 	<ul>
@@ -125,8 +125,8 @@
 </div>
 </a>
 
-<a href="property5.html" class="showcase_card_shops">
-<img src="images/shops/premium_shop.jpg" style="width: 300px; height: 200px;">
+<a href="enquiry.html" class="showcase_card_products">
+<img src="images/shops/premium_shop.jpg" class="products">
 <div class="showcase_text">
 	<h4>Premium shop</h4>
 	<ul>
