--- a/shops.html
+++ b/shops.html
@@ -56,7 +56,11 @@
 <!-- photocard links -->
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/shops/small_sized_shop.jpg" class="products">
+<div class="photo_container">
+	<img src="images/shops/small_sized_shop.jpg" class="products">
+	<!--Image taken from https://my-infinity.co.uk/shops/small-boutique-interior-design-ideas-small-clothing-store-interior-design-download-3d-house-interior-window-molding-ideas/-->
+		<div class="bottom_left">Johor Bahru</div>
+</div>
 <div class="showcase_text">
 	<h4>Small-sized shop</h4>
 	<ul>
@@ -70,7 +74,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/shops/small_sized_shop2.jpg" class="products">
+<div class="photo_container">
+	<img src="images/shops/small_sized_shop2.jpg" class="products">
+	<!--Image taken from https://apartmentsbronx.us/small-boutique-interior-design-ideas.html-->
+	<div class="bottom_left">Kuching</div>
+</div>
 <div class="showcase_text">
 	<h4>Small-sized shop</h4>
 	<ul>
@@ -84,7 +92,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/shops/medium_sized_shop.jpg" class="products">
+<div class="photo_container">
+	<img src="images/shops/medium_sized_shop.jpg" class="products">
+	<!--Image taken from http://tuaim.me/cafe-shop-design/cafe-shop-design-coffee-shop-interior-design-services-contracting-coffee-shop-design-small/-->
+	<div class="bottom_left">Subang Jaya</div>
+</div>
 <div class="showcase_text">
 	<h4>Medium-sized shop</h4>
 	<ul>
@@ -98,7 +110,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/shops/medium_sized_shop2.jpg" class="products">
+<div class="photo_container">
+	<img src="images/shops/medium_sized_shop2.jpg" class="products">
+	<!--Image taken from http://thesmartmarketing.me/coffee-shop-interior-design-ideas/coffee-shop-interior-design-ideas-coffee-shop-lighting-modern-fine-dining-restaurant-design-of-the-coffee-shop-coffee-shop-interior-design-pictures/-->
+	<div class="bottom_left">Kota Kinabalu</div>
+</div>
 <div class="showcase_text">
 	<h4>Medium-sized shop</h4>
 	<ul>
@@ -112,7 +128,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/shops/large_sized_shop.jpg" class="products">
+<div class="photo_container">
+	<img src="images/shops/large_sized_shop.jpg" class="products">
+	<!--Image taken from https://sognidarte.com/img/-->
+	<div class="bottom_left">Kuching</div>
+</div>
 <div class="showcase_text">
 	<h4>Large-sized shop</h4>
 	<ul>
@@ -126,7 +146,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<img src="images/shops/premium_shop.jpg" class="products">
+<div class="photo_container">
+	<img src="images/shops/premium_shop.jpg" class="products">
+	<!--Image taken from http://glamshops.net/reviews/porsche-store-design-in-singapore-->
+	<div class="bottom_left">Kuala Lumpur</div>
+</div>
 <div class="showcase_text">
 	<h4>Premium shop</h4>
 	<ul>
