--- a/enquiry.html
+++ b/enquiry.html
@@ -106,12 +106,12 @@
 			<option value="Small window office">Small window office</option>
 			<option value="Medium window office">Medium window office</option>
 			<option value="Large window office">Large window office</option>
-			<option value="Small-sized shop">Small-sized shop</option>
-			<option value="Small-sized shop">Small-sized shop</option>
-			<option value="Medium-sized shop">Medium-sized shop</option>
-			<option value="Medium-sized shop">Medium-sized shop</option>
-			<option value="Large-sized shop">Large-sized shop</option>
-			<option value="Premium shop">Premium shop</option>
+			<option value="Small-sized shop">Small-sized shop (Johor Bahru)</option>
+			<option value="Small-sized shop">Small-sized shop (Kuching)</option>
+			<option value="Medium-sized shop">Medium-sized shop (Subang Jaya)</option>
+			<option value="Medium-sized shop">Medium-sized shop (Kota Kinabalu)</option>
+			<option value="Large-sized shop">Large-sized shop (Kuching)</option>
+			<option value="Premium shop">Premium shop (Kuala Lumpur)</option>
 			</select> 	
 		<label>Rental duration (months)<input type="number" name="rentalduration" min="0" max="200" value="1" required="required"/></label>
 		<input type="message" id="message" name="enquiry" placeholder="State the reason for your enquiry" size="10" required="required"/>
