--- a/product.html
+++ b/product.html
@@ -49,7 +49,7 @@
 <hr/>
 <br/>
 <p class="page_intro">
-	Properties for rent. Rental periods are on a contractual basis. Contract renewals can be submitted in this page.
+	Properties for rent.
 </p>
 <br/>
 <hr/>
@@ -57,7 +57,7 @@
 <div class="product_box">
 <h3>Residential Properties</h3>
 	<a href="apartments.html" class="product_card">
-	<div class="product_text">
+	<div class="product_text_headline">
 		<h5>APARTMENTS</h5>
 	</div>
 	<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
@@ -67,7 +67,7 @@
 	</div>
 	</a>
 	<a href="houses.html" class="product_card">
-	<div class="product_text">
+	<div class="product_text_headline">
 		<h5>HOUSES</h5>
 	</div>
 	<img src="images/penang.jpg" style="width: 300px; height: 200px;">
@@ -81,7 +81,7 @@
 <div class="product_box">
 <h3>Commercial Properties</h3>
 	<a href="offices.html" class="product_card">
-	<div class="product_text">
+	<div class="product_text_headline">
 		<h5>OFFICES</h5>
 	</div>
 	<img src="images/office.jpg" style="width: 300px; height: 200px;">
@@ -91,7 +91,7 @@
 	</div>
 	</a>
 	<a href="shops.html" class="product_card">
-	<div class="product_text">
+	<div class="product_text_headline">
 		<h5>SHOPS</h5>
 	</div>
 	<img src="images/shop_thumbnail.jpg" style="width: 300px; height: 200px;">
