--- a/about.html
+++ b/about.html
@@ -61,23 +61,23 @@
 <br/>
 <br/>
 <p><h3>Members</h3></p>
-<a href="aboutme1.html" class="showcase_card">
-<img src="images/members/Ryan.jpeg" style="width: 300px; height: 200px;">
+<a href="aboutme1.html" class="showcase_profile">
+<img src="images/members/Ryan.jpeg" class="profile">
 <p style="color: black;">Ryan Then<br/>Team Leader</p>
 </a>
 
-<a href="aboutme2.html" class="showcase_card">
-<img src="images/members/Alex.jpeg" style="width: 300px; height: 200px;">
+<a href="aboutme2.html" class="showcase_profile">
+<img src="images/members/Alex.jpeg" class="profile">
 <p style="color: black;">Alex Haider Abedin<br/>Team Member</p>
 </a>
 
-<a href="aboutme3.html" class="showcase_card">
-<img src="images/members/Jonathan.jpeg" style="width: 300px; height: 200px;">
+<a href="aboutme3.html" class="showcase_profile">
+<img src="images/members/Jonathan.jpeg" class="profile">
 <p style="color: black;">Jonathan Embas<br/>Team Member</p>
 </a>
 
-<a href="aboutme4.html" class="showcase_card">
-<img src="images/members/Jeffery.jpeg" style="width: 300px; height: 200px;">
+<a href="aboutme4.html" class="showcase_profile">
+<img src="images/members/Jeffery.jpeg" class="profile">
 <p style="color: black;">Jeffrey Sia<br/>Team Member</p>
 </a>
 <br/>
