--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
 <a href="aboutme4.html" class="showcase_profile">
 <img src="images/members/Jeffery.jpeg" class="profile">
-<p style="color: black;">Jeffrey Sia<br/>Team Member</p>
+<p style="color: black;">Jeffery Sia<br/>Team Member</p>
 </a>
 <br/>
 <br/>
