--- a/aboutme2.html
+++ b/aboutme2.html
@@ -44,7 +44,7 @@
     <td class= "Contributiontd">1. About, Aboutme pages, Profile flip effect</td>
   </tr>
   <tr class = "Contributiontr">
-    <td class= "Contributiontd">2. Houses page</td>
+    <td class= "Contributiontd">2. Product (Houses) Page</td>
 </table>
   <p id="aboutmep">I'm an international student studying in Swinburne Malaysia. What I enjoy learning about the most in CS is machine learning and blockchain.</p>
   <p id="aboutmep">My main hobbies are playing competitive games and going to the gym. I also enjoy taking photos and love photography. In my hometown we love to eat arabian foods such as shawarmas and kababs. I also have a pet dog named Ralph. </p>
