--- a/houses.html
+++ b/houses.html
@@ -7,7 +7,7 @@
 
 <head>
 
-<title>Offices</title>
+<title>Houses</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -61,9 +61,9 @@
 	<ul>
 		<li>Monthly rate: RM 850</li>
 		<li>House: 850 sq. ft.</li>
-		<li>Rooms: 3 Bedrooms with Double Queen beds. 1 Spacious Living Room. 2 Bathrooms</li>
-		<li>Amenities: Free Wifi, TV, Washer, Air Conditioning. Heater</li>
-		<li>More: Pets welcome. Free-Parking</li>
+		<li>Rooms: 3 Bedrooms with Double Queen beds. 1 Spacious Living Room. 2 Bathrooms.</li>
+		<li>Amenities: Free Wifi, TV, Washer, Air Conditioning, Heater.</li>
+		<li>Extras: Pets welcome. Free-Parking</li>
 	</ul>
 </div>
 </a>
@@ -77,9 +77,9 @@
 	<ul>
 		<li>Monthly rate: RM 1200</li>
 		<li>House: 1150 sq. ft.</li>
-		<li>Rooms: 3 Bedrooms with King size beds. 2 Spacious Living Rooms. 2 Bathrooms</li>
+		<li>Rooms: 3 Bedrooms with King size beds. 2 Spacious Living Rooms. 2 Bathrooms.</li>
 		<li>Amenities: Free Wifi, TV, Washer, Air Conditioning, Heater, Hot Tub.</li>
-		<li>Extres: Free-Parking, Barbeque Grill Pit.</li>
+		<li>Extras: Free-Parking, Barbeque Grill Pit.</li>
 	</ul>
 </div>
 </a>
@@ -91,11 +91,11 @@
 	<h4>Forest Retreat Cottage</h4>
 	<p> Are you looking for a private escape in the woodlands with all of the comforts of home? Then, look no further! </p>
 	<ul>
-		<li>Monthly rate: RM 1200</li>
-		<li>House: 1150 sq. ft.</li>
-		<li>Rooms: 3 Bedrooms with King size beds. 2 Spacious Living Rooms. 2 Bathrooms</li>
-		<li>Amenities: Free Wifi, TV, Washer, Air Conditioning, Heater, Hot Tub.</li>
-		<li>Extres: Free-Parking, Barbeque Grill Pit.</li>
+		<li>Monthly rate: RM 1400</li>
+		<li>House: 1600 sq. ft.</li>
+		<li>Rooms: 4 Bedrooms with King size beds. 1 Spacious Living Rooms. 3 Bathrooms.</li>
+		<li>Amenities: Free Wifi, TV, Washer, Air Conditioning, Fireplace Heater, Hot Tub, Kitchen.</li>
+		<li>Extras: Free-Parking, Barbeque Grill Pit.</li>
 	</ul>
 </div>
 </a>
