--- a/houses.html
+++ b/houses.html
@@ -117,10 +117,10 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/f764043c-c879-4ac2-991c-39baf3cb22de.c10.jpg-->
+<!--Image taken from https://odis.homeaway.com/odis/listing/0d771ae4-b14b-42a5-a441-b979c5ae9bcf.c10.jpg-->
 <img src="images/houses/palmhouse.jpg" alt="Regal Palmhouse" class="products">
 <div class="showcase_text">
-	<h4>Southern Belle Townhouse</h4>
+	<h4>Regal Palmhouse</h4>
 	<p> Welcome to Regal Palmhouse. Here you will enjoy your stay with the beach a mere 2 miles away </p>
 	<ul>
 		<li>Monthly rate: RM 1900</li>
@@ -134,16 +134,16 @@
 
 <a href="enquiry.html" class="showcase_card_products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/f764043c-c879-4ac2-991c-39baf3cb22de.c10.jpg-->
-<img src="images/houses/palmhouse.jpg" alt="Regal Palmhouse" class="products">
+<img src="images/houses/historichouse.jpg" alt="Regal Palmhouse" class="products">
 <div class="showcase_text">
-	<h4>Southern Belle Townhouse</h4>
-	<p> Welcome to Regal Palmhouse. Here you will enjoy your stay with the beach a mere 2 miles away </p>
+	<h4>Historic Renaissance House</h4>
+	<p> This historic luxurious stone house was built in 1897 by Lord Rieger's family. </p>
 	<ul>
-		<li>Monthly rate: RM 1900</li>
-		<li>House: 1400 sq. ft.</li>
-		<li>Rooms: 4 Bedrooms with Queen size beds. 1 Living Rooms. 2 Bathrooms.</li>
-		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Shower, Kitchen.</li>
-		<li>Extras: Pet Friendly, Barbeque Grill Pit. </li>
+		<li>Monthly rate: RM 2600</li>
+		<li>House: 2100 sq. ft.</li>
+		<li>Rooms: 5 Bedrooms with King size beds. 1 Living Rooms. 3 Bathrooms. Formal Dining Room.</li>
+		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Shower, Kitchen, Movie room.</li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
 	</ul>
 </div>
 </a>
